--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -185,12 +185,12 @@
     },
     "features": {
         "title": "مميزاتنا",
-        "chat_bot": "الشات الآلي",
+        "rareMedicine": "الادواية النادرة",
         "medical_tests": "التحاليل الطبية",
         "prescription": "الروشتات الطبية",
         "donation": "التبرع",
         "description": {
-            "chat_bot": "لدينا chatbot هنا لمساعدتك في العثور على إجابات لأسئلتك 24/7. سواء كنت بحاجة إلى معلومات حول الأدوية أو المساعدة في طلبك أو إرشادات بشأن الاستفسارات المتعلقة بالصحة، فإن برنامج الدردشة الآلي الخاص بنا متاح دائمًا لتقديم الدعم الفوري والشخصي.",
+            "rareMedicine": "تتيح ميزة طلب الأدوية النادرة للمستخدمين طلب الأدوية غير المتوفرة بسهولة من خلال نموذج بسيط، مع تعبئة تلقائية لتفاصيل الملف الشخصي ودعم اللغتين العربية والإنجليزية. تضمن هذه الميزة معالجة فعّالة للطلبات مع تقديم ردود فعل فورية وتأكيد.",
             "medical_tests": "الوصول إلى نتائج الاختبارات الطبية الخاصة بك بكل سهولة. قم بتحميل تقارير الاختبار الخاصة بك، وفي غضون لحظات، ستكون نتائجك في متناول يدك.",
             "prescription": "قم بتحميل الروشتة الخاصة بك بمجرد التقاط صورة أو تحميلها مباشرة. بمجرد التحميل، يقوم نظامنا على الفور بتحويل الوصفة الطبية إلى نص رقمي، ثم سترى الدواء الذي تريده أو البديل المناسب له.",
             "donation": "إذا كنت ترغب في دعم المحتاجين الذين لا يستطيعون تحمل تكاليف أدويتهم، فيمكنك الآن التبرع بالأموال بشكل آمن من خلال منصتنا باستخدام فيزا."
@@ -238,6 +238,7 @@
     "rare_medicine": {
         "request_form": " طلب دواء نادر",
         "medicine_name": "اسم الدواء",
+        "quantity_message": "يجب أن تكون الكمية بين 1 و 3.",
         "address": "العنوان",
         "quantity": "الكمية",
         "submit_request": "إرسال الطلب",
