--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -141,7 +141,12 @@
         "favorite_already": "المنتج موجود بالفعل في المفضلة",
         "favorite_fail": "فشل في إضافة المنتج إلى المفضلة. الرجاء المحاولة لاحقاً.",
         "only_three": "يمكنك إضافة 3 وحدات فقط من كل منتج.",
-        "favorite_remove_success": "تمت إزالة المنتج من المفضلات"
+        "favorite_remove_success": "تمت إزالة المنتج من المفضلات",
+        "sort_default": "الترتيب",
+        "sort_price_asc": "السعر: من الأقل إلى الأعلى",
+        "sort_price_desc": "السعر: من الأعلى إلى الأقل",
+        "sort_name_asc": "الاسم: من الألف إلى الياء",
+        "sort_name_desc": "الاسم: من الياء إلى الألف"
     },
     "productDetail": {
         "loading": "جاري التحميل...",
