--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -284,6 +284,7 @@
         "my_account": "حسابي",
         "my_favourite": "المفضلة لدي",
         "my_orders": "طلباتي",
+        "feedback":"ضع تعليقك",
         "profile": "الملف الشخصي",
         "full_name": "الاسم الكامل",
         "edit": "تحرير",
@@ -317,7 +318,7 @@
         "title": "المنتجات المفضلة لدي",
         "no_token": "لم يتم العثور على الرمز المميز",
         "fetch_failed": "فشل في جلب المفضلات",
-        "auth_token_missing": "لم يتم العثور على رمز التوثيق",
+        "auth_token_missing":  "يجب تسجيل الدخول لاضافة المنتج الي المفضلة",
         "removed_success": "تمت إزالة المنتج من المفضلات",
         "remove_failed": "فشل في إزالة المنتج من المفضلات",
         "no_favorites": "لا توجد منتجات مفضلة لديك.",
@@ -349,7 +350,16 @@
         "remove_fail": "فشل في إزالة المنتج من السلة",
         "cartClearSuccess": "تم إفراغ السلة بنجاح",
         "cartClearError": "فشل في إفراغ السلة",
-        "total_quantity": "الكمية الإجمالية"
+        "total_quantity": "الكمية الإجمالية",
+        "auth_token_missing":  "يجب تسجيل الدخول لاضافة المنتج الي العربة",
+        "fetch_error": "فشل في تحميل عناصر السلة.",
+        "max_quantity_exceeded": "لا يمكنك إضافة أكثر من 3 من أي عنصر.",
+        "stock_exceeded": "المخزون غير كاف.",
+        "add_success": "تم إضافة العنصر إلى السلة بنجاح.",
+        "add_error": "فشل في إضافة العنصر إلى السلة.",
+        "remove_error": "فشل في إزالة العنصر من السلة.",
+        "clear_success": "تم مسح السلة بنجاح.",
+        "clear_error": "فشل في مسح السلة."
     },
     "checkout": {
         "address_label": "العنوان:",
