--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -12,7 +12,7 @@
         "login": "Login",
         "register": "Create Account",
         "shop_now": "Shop now",
-        "offer": "welcome to Elagi ❤️✨",
+        "offer": "welcome to Elagi ❤️✨,",
         "cart": "Cart"
     },
     "register": {
