--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -215,6 +215,7 @@
         "upload": "تحميل",
         "uploading": "جار التحميل...",
         "or": "أو",
+        "insert_manually":"قم بادخال نسبة الكالسيوم الكلي يدويا",
         "calcium_level": "الكالسيوم (الكلي)",
         "auth_token_missing": "يجب أن تكون مسجل الدخول لرفع الروشتة."
     },
