--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -10,9 +10,9 @@
         "profile": "Profile",
         "logout": "Logout",
         "login": "Login",
-        "register": "Create Account",
+        "register": "Sign Up",
         "shop_now": "Shop now",
-        "offer": "welcome to Elagi ❤️✨,",
+        "offer": "welcome to Elagi ❤️,",
         "cart": "Cart"
     },
     "register": {
