--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -12,7 +12,7 @@
         "login": "تسجيل الدخول",
         "register": "إنشاء حساب",
         "shop_now": "تسوق الآن",
-        "offer": " مرحبا بك في علاجي ❤️✨",
+        "offer": " مرحبا بك في علاجي ❤️،",
         "cart": "عربة التسوق"
     },
     "register": {
