--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -291,7 +291,7 @@
         "my_account": "حسابي",
         "my_favourite": "المفضلة لدي",
         "my_orders": "طلباتي",
-        "feedback":"ضع تعليقك",
+        "feedback":"أضف تعليقك",
         "profile": "الملف الشخصي",
         "full_name": "الاسم الكامل",
         "edit": "تحرير",
