--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -292,7 +292,7 @@
         "my_account": "My Account",
         "my_favourite": "My Favourite",
         "my_orders": "My Orders",
-        "my_feedback":"Put Your Feedback",
+        "my_feedback":"Add Your Feedback",
         "profile": "Profile",
         "full_name": "Full Name",
         "edit": "Edit",
